--- a/task-service/src/main/resources/bootstrap.yml
+++ b/task-service/src/main/resources/bootstrap.yml
@@ -10,3 +10,10 @@ spring:
 # pointing to the config-server aplication         
       uri: http://localhost:8888
       
+---
+
+spring:
+  profiles: docker
+  cloud:
+     config:
+        uri: http://configserver:8888
